# platform.core.appfw.xdgmime

./: CMakeLists.txt  COPYING  project.config  xdgmime.pc.in
debian/: changelog  control  copyright  libxdgmime.install.in  libxdgmime.postinst  rules
packaging/: xdgmime.changes  xdgmime.spec
test/: CMakeLists.txt  perf.h  xdgmime_test.c
xdgmime/src/: xdgmime.c  xdgmime.h  xdgmimealias.c  xdgmimecache.c  xdgmimeglob.c  xdgmimeglobs2.c  xdgmimeicon.c  xdgmimeint.c  xdgmimemagic.c
